--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+html, body {
+	position: relative;
+	height: 100%;
+	width: 100%;
+}
+
 body {
 	background: url(../images/kevin-black.jpg) no-repeat center 100%;
 	background-size: cover;
@@ -98,3 +104,18 @@ main {
 	border-radius: 0 0 5px 5px;
 }
 
+#Message {
+	font-size: 16px;
+}
+
+@media screen and (max-width: 576px) {
+	#StartUp {
+		padding-top: 30px;
+	}
+	.bg-success h3 {
+		font-size: 16px;
+	}
+	#ChatList{
+		display:none;
+	}
+}
